@@ -83,6 +83,7 @@
 		<property name="logger"><ref bean="org.sakaiproject.service.framework.log.Logger"/></property>
 		<property name="domain"><value>mydomain.edu</value></property>
 		<property name="loginContext"><value>KerberosAuthentication</value></property>
+		<property name="cachettl"><value>600000</value></property>
 		<property name="requireLocalAccount"><value>true</value></property>
 		<property name="knownUserMsg"><value>Integrity check on decrypted field failed</value></property>
 	</bean>
